--- a/Proyecto_AA.ipynb
+++ b/Proyecto_AA.ipynb
@@ -4241,7 +4241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 75,
    "id": "66c7502a",
    "metadata": {},
    "outputs": [
@@ -4249,29 +4249,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matriz original:\n",
-      " [[  0.  34.   0. ...   0.   0.   5.]\n",
+      "[[  0.  34.   0. ...   0.   0.   5.]\n",
       " [  2. 144.   0. ...   3.   0.  21.]\n",
       " [  0.   0.   0. ...   0.   0.   0.]\n",
       " ...\n",
       " [  1.   9.   0. ...   5.   0.   7.]\n",
       " [  0.   0.   0. ...   0.   0.   0.]\n",
-      " [  2.   4.   0. ...   0.   0.   5.]]\n",
-      "Matriz rotada:\n",
-      " [[  0.          36.11857223   0.         ...   0.           0.\n",
-      "    4.71520105]\n",
-      " [  1.71426294 122.7157033    0.         ...   2.98245857   0.\n",
-      "   19.81574629]\n",
-      " [  0.           0.           0.         ...   0.           0.\n",
-      "    0.        ]\n",
-      " ...\n",
-      " [  1.12814778   9.92339      0.         ...   5.57094148   0.\n",
-      "    7.96781598]\n",
-      " [  0.           0.           0.         ...   0.           0.\n",
-      "    0.        ]\n",
-      " [  2.21774901   4.33250404   0.         ...   0.           0.\n",
-      "    5.33843855]]\n",
-      "(163, 163)\n"
+      " [  2.   4.   0. ...   0.   0.   5.]]\n"
      ]
     }
    ],
@@ -4280,6 +4264,9 @@
     "\n",
     "G=matriz_origen_destino.values\n",
     "\n",
+    "Pa=matrix.values\n",
+    "\n",
+    "k=0.5\n",
     "\n",
     "def perturb_matrix(mat, perturbation_percent=15):\n",
     "    \"\"\"\n",
@@ -4307,77 +4294,73 @@
     "# Aplicar perturbación\n",
     "G_prime = perturb_matrix(G, 15)\n",
     "\n",
-    "print(\"Matriz original:\\n\", G)\n",
-    "print(\"Matriz rotada:\\n\", G_prime)\n"
+    "print(g)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "b85e4862",
+   "execution_count": 90,
+   "id": "447e1323",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'flatten'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_4596\\878550160.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m     47\u001b[0m     \u001b[0mva_prime\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPa\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mG_prime_flat\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mva\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mva_prime\u001b[0m  \u001b[1;31m# Mantenemos va y va_prime como vectores\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[1;31m# Calcular va y va_prime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 51\u001b[1;33m \u001b[0mva\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mva_prime\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompute_va\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mG_prime\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPa\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     52\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m \u001b[1;31m# Función objetivo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mobjective_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mG\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mva\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mva_prime\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_4596\\878550160.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(g, G_prime, Pa, n, q)\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcompute_va\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mG_prime\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPa\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m     \u001b[0mg_flat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# Aplanamos g para poder multiplicar por Pa\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m     \u001b[0mG_prime_flat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mG_prime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# Lo mismo para G_prime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m     \u001b[0mva\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPa\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mg_flat\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m     \u001b[0mva_prime\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPa\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mG_prime_flat\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6200\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6201\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6202\u001b[0m         \u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6203\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6204\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'flatten'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g aplanado sin diagonal: [34.  0.  0. ...  0.  0.  0.]\n",
+      "G_prime aplanado sin diagonal: (26406,)\n"
      ]
     }
    ],
    "source": [
-    "'''\n",
-    "# Aqui van datos prueba xdxdxdxd\n",
-    "# Definimos algunas matrices de prueba\n",
-    "n = 3  # Dimensión de las matrices G y g\n",
-    "q = 4  # Dimensión no cuadrada de Pa\n",
-    "k = 0.5  # Parámetro de regularización\n",
+    "def flatten_matrix_without_diagonal(mat):\n",
+    "    \"\"\"\n",
+    "    Elimina la diagonal de una matriz cuadrada y aplana el resto.\n",
     "\n",
-    "# Matrices dummy\n",
-    "# Definir dimensiones\n",
-    "n = 3  # Dimensión de las matrices G y g\n",
-    "q = 4  # Dimensión no cuadrada de Pa\n",
+    "    Args:\n",
+    "    mat (numpy.ndarray): Matriz cuadrada de la que se eliminará la diagonal.\n",
     "\n",
-    "# Matrices predefinidas\n",
-    "g = np.array([[0.1, 0.2, 0.3],\n",
-    "              [0.4, 0.5, 0.6],\n",
-    "              [0.7, 0.8, 0.9]])\n",
+    "    Returns:\n",
+    "    numpy.ndarray: Array aplanado de la matriz sin los elementos diagonales.\n",
+    "    \"\"\"\n",
+    "    n = mat.shape[0]\n",
+    "    flattened = mat[~np.eye(n, dtype=bool)].reshape(n, n-1)\n",
+    "    return flattened.flatten()\n",
     "\n",
-    "G = np.array([[0.9, 0.8, 0.7],\n",
-    "              [0.6, 0.5, 0.4],\n",
-    "              [0.3, 0.2, 0.1]])\n",
+    "g_flat_no_diag = flatten_matrix_without_diagonal(g)\n",
+    "G_prime_flat_no_diag = flatten_matrix_without_diagonal(G_prime)\n",
+    "G_flat_no_diag=flatten_matrix_without_diagonal(G)\n",
     "\n",
-    "Pa = np.array([[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9],\n",
-    "               [0.9, 0.8, 0.7, 0.6, 0.5, 0.4, 0.3, 0.2, 0.1],\n",
-    "               [0.2, 0.3, 0.5, 0.7, 0.11, 0.13, 0.17, 0.19, 0.23],\n",
-    "               [0.3, 0.1, 0.4, 0.1, 0.6, 0.9, 0.2, 0.8, 0.7]])\n",
-    "\n",
-    "\n",
-    "# Deformación de G, por ejemplo, una rotación simple\n",
-    "theta = np.pi / 4  # 45 grados de rotación\n",
-    "rotation_matrix = np.array([[np.cos(theta), -np.sin(theta), 0],\n",
-    "                            [np.sin(theta),  np.cos(theta), 0],\n",
-    "                            [0,              0,             1]])\n",
-    "G_prime = G @ rotation_matrix\n",
-    "\n",
-    "'''\n",
-    "\n",
+    "print(\"g aplanado sin diagonal:\", g_flat_no_diag)\n",
+    "print(\"G_prime aplanado sin diagonal:\", G_prime_flat_no_diag.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "b85e4862",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: \n",
+      " [34.  0.  0. ...  0.  0.  0.] \n",
+      "\n",
+      "Valor de la función objetivo: 275540.55135782977\n"
+     ]
+    }
+   ],
+   "source": [
     "# Función para calcular va y va_prime\n",
-    "def compute_va(g, G_prime, Pa, n, q):\n",
-    "    g_flat = g.flatten()  # Aplanamos g para poder multiplicar por Pa\n",
-    "    G_prime_flat = G_prime.flatten()  # Lo mismo para G_prime\n",
+    "def compute_va(g_flat, G_prime_flat, Pa):\n",
     "    va = Pa @ g_flat\n",
     "    va_prime = Pa @ G_prime_flat\n",
     "    return va, va_prime  # Mantenemos va y va_prime como vectores\n",
     "\n",
     "# Calcular va y va_prime\n",
-    "va, va_prime = compute_va(g, G_prime, Pa, n, q)\n",
+    "va, va_prime = compute_va(g_flat_no_diag, G_prime_flat_no_diag, Pa)\n",
     "\n",
     "# Función objetivo\n",
     "def objective_function(g, G, va, va_prime, k):\n",
@@ -4386,14 +4369,14 @@
     "    return 0.5 * (term1 + term2)\n",
     "\n",
     "# Calcular el valor de la función objetivo\n",
-    "objective_value = objective_function(g, G, va, va_prime, k)\n",
-    "print(\"Input: \\n\", g, \"\\n\")\n",
+    "objective_value = objective_function(g_flat_no_diag, G_flat_no_diag, va, va_prime, k)\n",
+    "print(\"Input: \\n\", g_flat_no_diag, \"\\n\")\n",
     "print(\"Valor de la función objetivo:\", objective_value)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 93,
    "id": "4b8b4471",
    "metadata": {},
    "outputs": [
@@ -4402,9 +4385,8 @@
      "output_type": "stream",
      "text": [
       "Jacobiano de la función objetivo:\n",
-      " [[-0.77310581 -0.59833866 -0.09216254]\n",
-      " [ 0.00992883  0.69289351  1.20866059]\n",
-      " [ 1.04988744  1.76769688  2.01300847]]\n"
+      " [-210.76756812   49.47653287  133.37062559 ...  114.42687456  -33.2324566\n",
+      "  -75.60059289]\n"
      ]
     }
    ],
@@ -4443,17 +4425,15 @@
     "# Supongamos que ya tenemos g, G, Pa, va, va_prime definidos como antes\n",
     "# Supongamos también que k y las matrices están correctamente definidas\n",
     "\n",
-    "# Cálculo de va y va_prime\n",
-    "va, va_prime = compute_va(g, G_prime, Pa, n, q)\n",
     "\n",
     "# Cálculo del gradiente\n",
-    "gradient = compute_gradient(g, G, va, va_prime, Pa, k)\n",
+    "gradient = compute_gradient(g_flat_no_diag, G_flat_no_diag, va, va_prime, Pa, k)\n",
     "print(\"Jacobiano de la función objetivo:\\n\", gradient)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 95,
    "id": "f7422308",
    "metadata": {},
    "outputs": [
@@ -4462,10 +4442,9 @@
      "output_type": "stream",
      "text": [
       "Solución encontrada:\n",
-      " [[0.79092771 0.70882331 0.60237297]\n",
-      " [0.52798231 0.39211876 0.28140159]\n",
-      " [0.22459131 0.0978443  0.00897434]]\n",
-      "Iteraciones realizadas: 4\n"
+      " [ 3.41203508e+01  3.05733631e-02 -3.97440641e-03 ...  4.08226205e-03\n",
+      "  4.57363648e-02  3.06099626e-02]\n",
+      "Iteraciones realizadas: 342\n"
      ]
     }
    ],
@@ -4491,7 +4470,7 @@
     "    \"\"\"\n",
     "\n",
     "    # Calcular va y va_prime utilizando la función compute_va\n",
-    "    va, va_prime = compute_va(g, G_prime, Pa, n, q)\n",
+    "    va, va_prime = compute_va(g, G_prime, Pa)\n",
     "\n",
     "    # Calcular el gradiente inicial basado en g y otros parámetros\n",
     "    r = compute_gradient(g, G, va, va_prime, Pa, k)\n",
@@ -4520,7 +4499,7 @@
     "\n",
     "\n",
     "# Solución con datos dummy\n",
-    "solution, iterations = grad_conjugado(g, G, Pa, G_prime, k, 1e-14)\n",
+    "solution, iterations = grad_conjugado(g_flat_no_diag, G_flat_no_diag, Pa, G_prime_flat_no_diag, k, 1e-14)\n",
     "print(\"Solución encontrada:\\n\", solution)\n",
     "print(\"Iteraciones realizadas:\", iterations)\n",
     "\n"
